[package]
name = "wasm-alert"
version = "0.1.0"
authors = ["Ebenezer Jojo Mensah <jojmensah89@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/jojmensah89/wasm-alert"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
